--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html
@@ -179,12 +179,12 @@
             <summary id="help-registered">Already registered for an account</summary>
             <h4>Use your existing credentials</h4>
             <p>If you have already registered for another CRA account, <a href="/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services.html">sign in with your existing account credentials</a>.</p>
-		              <p>If you registered with a <strong>provincial digital ID</strong>, you must also register with a CRA user ID and password or <i>Interac</i> sign-in partner to access:
+		              <p>If you registered with a <strong>provincial sign-in partner</strong>, you must also register with a CRA user ID and password or <i>Interac</i> sign-in partner to access:
 				      <ul><li>My Business Account</li>
 					      <li>Represent a Client</li></ul>
 	  <p>If you have forgotten your CRA user ID or password, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section5">Lost or forgotten CRA user ID or password</a>.</p>
             <details><summary>Change the option you sign in with</summary>
-            <p>If you registered with a <strong>provincial digital ID</strong>, you can also register with a CRA user ID and password or <i>Interac</i> sign-in partner.</p>
+            <p>If you registered with a <strong>provincial sign-in partner</strong>, you can also register with a CRA user ID and password or <i>Interac</i> sign-in partner.</p>
             <p>If you registered with a <strong>CRA user ID and password</strong>, you can sign in with your CRA user ID and password and <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section8">revoke your credential</a> so you can register with a different sign-in option.</p>
 		<p>If you registered with a <strong><i>Interac</i> sign-in partner</strong>, you can sign in to your current <i>Interac</i> sign-in partner and <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html#section4">switch to a different bank or credit union</a>.</p>    
 		    
@@ -255,7 +255,7 @@
               <li>Your Canadian driver's license</li>
               <li>Your provincial or territorial photo ID card</li>
             </ul>
-            <p class="mya hidden">When you register with a provincial digital ID, you <strong>only</strong> need your social insurance number (SIN).</p>
+            <p class="mya hidden">When you register with a provincial sign-in partner, you <strong>only</strong> need your social insurance number (SIN).</p>
             <details>
               <summary>Have your documents ready before you begin</summary>
               <p>During registration, your session will expire after 18 minutes of inactivity. Gather your documents before you begin to avoid your session timing out.</p>
@@ -278,12 +278,12 @@
               <!--<h3 class="h4">--><dt><span class="fas fa-check text-success"></span> <i>Interac</i> sign-in partner</dt>
               <dd>This option lets you use the <strong>same</strong> sign-in information you use for online banking. You must already have an online account with one of our <a class="wb-lbx" role="button" aria-controls="sign-in-partners" href="#sign-in-partners">sign-in partner banks or credit <span class="nowrap">unions<sup><span class="mrgn-lft-xs far fa-question-circle"></span></sup></span></a>.</dd>
               <div class="all-mya">
-                <!--<h3 class="h4" id="province">--><dt><span class="fas fa-check text-success"></span> Provincial digital ID</dt>
+                <!--<h3 class="h4" id="province">--><dt><span class="fas fa-check text-success"></span> Provincial sign-in partner</dt>
                 <dd>If you already have a BC Services Card or an Alberta.ca Account, you can use them to immediately access your My Account. </dd>
                 <div id="ajax-province">
                   <dd>The first time you sign in, you will need to enter your SIN to validate your identity. You will not need to use <i>Interac</i> document verification service or a CRA security code to validate your identity.</dd>
-                  <dd>You <strong>can</strong> register with your provincial digital ID even if you have not filed your taxes in the last 2 years, as long as you have filed your taxes at least once in the past.</dd>
-                  <dd>You <strong>cannot</strong> use your provincial digital ID to access My Business Account, Represent a Client, and certain services like Express Notice of Assessment or Auto-fill My Return. If you would like to access those accounts or services, you can still create a CRA user ID and password or use an <i>Interac</i> sign-in partner.</dd>
+                  <dd>You <strong>can</strong> register with your provincial sign-in partner even if you have not filed your taxes in the last 2 years, as long as you have filed your taxes at least once in the past.</dd>
+                  <dd>You <strong>cannot</strong> use your provincial sign-in partner to access My Business Account, Represent a Client, and certain services like Express Notice of Assessment or Auto-fill My Return. If you would like to access those accounts or services, you can still create a CRA user ID and password or use an <i>Interac</i> sign-in partner.</dd>
                 </div>
               </div>
               <!--<h3 class="h4">--><dt><span class="fas fa-times text-danger"></span> GC Key</dt>
@@ -350,9 +350,9 @@
                   </details>
               </li>
               <li class="cnjnctn-col mya hidden">
-                <div class="mrgn-bttm-md"><a class="btn btn-primary btn-lg btn-block p-sm-3" href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/provincial-partner.html" target="_blank" rel="noreferrer noopener"><span class="h3"><span class="fas fa-id-card fa-lg fa-pull-left mrgn-rght-sm"></span>Register with a provincial digital ID (BC, Alberta)</span><span class="wb-inv"> (opens in a new window/tab)</span></a></div>
+                <div class="mrgn-bttm-md"><a class="btn btn-primary btn-lg btn-block p-sm-3" href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/provincial-partner.html" target="_blank" rel="noreferrer noopener"><span class="h3"><span class="fas fa-id-card fa-lg fa-pull-left mrgn-rght-sm"></span>Register with a provincial sign-in partner (BC, Alberta)</span><span class="wb-inv"> (opens in a new window/tab)</span></a></div>
                 <details id="ajax-help-province" class="mrgn-tp-md">
-                  <summary>Help with provincial digital ID</summary>
+                  <summary>Help with provincial sign-in partners</summary>
                   <p>To use this option, you must have an account with one of our provincial partners:</p>
                   <ul class="mrgn-bttm-md">
                     <li>BC Services Card</li>
@@ -360,7 +360,7 @@
                   </ul>
                  <div data-ajax-replace="#ajax-province"><a href="#province">Provincial sign-in partner</a></div>
 			
-                  <p class="mrgn-tp-lg"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html">More help with provincial digital ID</a></p>
+                  <p class="mrgn-tp-lg"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html">More help with provincial sign-in partner</a></p>
                 </details>
               </li>
             </ul>
@@ -382,7 +382,7 @@
 			    <div data-ajax-replace="#ajax-help-interac2"></div>
                     </li>
                     <li class="cnjnctn-col">
-                      <div class="mrgn-bttm-md"><a class="btn btn-primary btn-lg btn-block p-sm-3" href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/provincial-partner.html" target="_blank" rel="noreferrer noopener"><span class="h3"><span class="fas fa-id-card fa-lg fa-pull-left mrgn-rght-sm"></span>Register with a provincial digital ID (BC, Alberta)</span><span class="wb-inv"> (opens in a new window/tab)</span></a></div>
+                      <div class="mrgn-bttm-md"><a class="btn btn-primary btn-lg btn-block p-sm-3" href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/provincial-partner.html" target="_blank" rel="noreferrer noopener"><span class="h3"><span class="fas fa-id-card fa-lg fa-pull-left mrgn-rght-sm"></span>Register with a provincial sign-in partner (BC, Alberta)</span><span class="wb-inv"> (opens in a new window/tab)</span></a></div>
                       <div data-ajax-replace="#ajax-help-province"></div>
                     </li>
                   </ul>
@@ -548,7 +548,7 @@
             <summary>Have not filed your taxes</summary>
             <p>If you have not filed your taxes for the current or previous tax year, you will not be able to register for My Account using a CRA user ID and password or an <i>Interac</i> sign-in partner. You also won't be able to register for My Business Account or Represent a Client.</span></p>
             <p>For information on how to file, go to <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes.html">Get ready to do your taxes</a>.</p>
-            <p>If you live in British Columbia or Alberta, you may be able to register for My Account using a provincial digital ID.</p>
+            <p>If you live in British Columbia or Alberta, you may be able to register for My Account using a provincial sign-in partner.</p>
           </details>
         </div>
         <div class="col-sm-6">
