--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html
@@ -179,12 +179,12 @@
             <summary id="help-registered">Already registered for an account</summary>
             <h4>Use your existing credentials</h4>
             <p>If you have already registered for another CRA account, <a href="/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services.html">sign in with your existing account credentials</a>.</p>
-		              <p>If you registered with a <strong>provincial sign-in partner</strong>, you must also register with a CRA user ID and password or <i>Interac</i> sign-in partner to access:
+		              <p>If you registered with a <strong>provincial sign-in partner</strong>, you must also create a CRA user ID and password or use an <i>Interac</i> sign-in partner to access:
 				      <ul><li>My Business Account</li>
 					      <li>Represent a Client</li></ul>
 	  <p>If you have forgotten your CRA user ID or password, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section5">Lost or forgotten CRA user ID or password</a>.</p>
             <details><summary>Change the option you sign in with</summary>
-            <p>If you registered with a <strong>provincial sign-in partner</strong>, you can also register with a CRA user ID and password or <i>Interac</i> sign-in partner.</p>
+            <p>If you registered with a <strong>provincial sign-in partner</strong>, you can also create a CRA user ID and password or use an <i>Interac</i> sign-in partner.</p>
             <p>If you registered with a <strong>CRA user ID and password</strong>, you can sign in with your CRA user ID and password and <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section8">revoke your credential</a> so you can register with a different sign-in option.</p>
 		<p>If you registered with a <strong><i>Interac</i> sign-in partner</strong>, you can sign in to your current <i>Interac</i> sign-in partner and <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html#section4">switch to a different bank or credit union</a>.</p>    
 		    
