--- a/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html
@@ -217,13 +217,16 @@
 
  <p>You may have received a notification that your user ID and password have been revoked. If that happens, you can regain access to your CRA account in the following ways:  </p>
     <dl class="dl-horizontal">
-    <dt>Option 1</dt>
-    <dd><strong>Use a different sign in method:</strong><br>
-    <p>If you have one, you may be able to sign in by using a different CRA user ID and password, <i>Interac&reg;</i> sign-in service, or a provincial digital ID to access your account.</p>
+    <dt>Use a different sign in method</dt>
+    <dd>
+    You may be able to access your account with:
+	    <ul><li>A different CRA user ID and password, if you already have one</li>
+		    <li>An <i>Interac&reg;</i> sign-in partner</li>
+		    <li>A provincial sign-in partner</li></ul>
     </dd>
-    <dt>Option 2</dt>
-    <dd><strong>Register with a new CRA user ID:</strong><br>
-    <p>You may need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us</a> to register with a new CRA user ID and password. <!--When registering, ensure that your user ID is unique to your CRA account. To help avoid having your CRA user ID and password revoked in the future, your new user ID and password <strong>should not</strong>:</p>
+    <dt>Register with a new CRA user ID</dt>
+    <dd>
+    You may need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us</a> to register with a new CRA user ID and password. <!--When registering, ensure that your user ID is unique to your CRA account. To help avoid having your CRA user ID and password revoked in the future, your new user ID and password <strong>should not</strong>:
    <ul>
      <li>Be similar to one that was previously revoked</li>
      <li>Contain any parts of your name</li>
