--- a/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
@@ -121,7 +121,7 @@
     <p>When you use an <i>Interac</i> sign-in partner, the information you enter and the identity of your financial institution are not shared with the government service you are trying to access. Similarly, information about the government service being accessed is not shared with your financial institution. No personally identifying information or banking details are ever shared. </p>
   <p>Because the <i>Interac</i> sign-in partner does not provide any identity information to the Government, you must identify yourself by providing some personal information the first time you use this service.</p>
     <h3>Using a shared device</h3>
-    <p>When you select the <i>Interac</i> sign-in partner option and choose your financial institution, you will be prompted to enter your banking sign-in information. Some devices allow banking information to pre-populate. Do <strong>not</strong> use your browser's auto-complete for your online banking information if you register on a shared device. Unless you manually enter your own information, you could link your SIN to someone else's banking information by mistake, and the other person would have access to your CRA account.</p>
+    <p>When you select the <i>Interac</i> sign-in partner option and choose your financial institution, you will be prompted to enter your banking sign-in information. Some devices allow banking information to pre-populate. Do <strong>not</strong> use your browser's autofill for your online banking information if you register on a shared device. Unless you manually enter your own information, you could link your SIN to someone else's banking information by mistake, and the other person would have access to your tax information.</p>
   </div>
   
   <h2 id="section4">Change your sign-in option</h2>
@@ -130,7 +130,8 @@
 	<h3>Switch your <i>Interac</i> sign-in partner</h3>
 	</p> You can switch your <i>Interac</i> sign-in partner as long as you still have access to your account.</p>
 	<ol class="">
-   <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">Sign in to your account</a> with your <i>Interac</i> sign in partner</li>
+   <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">Select your account</a></li> 
+	   <li>Select <i>Interac</i> sign in partner</li>
 
     <li>Select <strong>Switch My Sign-In Partner</strong> at the top of the screen</li>
     <li>Follow the instructions</li>
