--- a/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>About provincial digital ID - Canada.ca</title>
+<title>About provincial sign-in partner - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data --> 
 <!-- Meta data--> 
@@ -54,24 +54,24 @@
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
 <div class="mwstitle section">
 <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA account help</p>
-<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">About provincial digital ID</h1>
+<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">About provincial sign-in partner</h1>
 </div>
   <nav role="navigation" class="gc-toc">
-<p>A provincial digital ID uses a type of government-issued identification to sign in. Currently, this sign-in option is only available to residents of BC and Alberta.</p>
-	<!--  <p>You can use a provincial digital ID to sign in to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>. You <strong>cannot</strong> use a provincial sign-in partner to sign in to My Business Account or Represent a Client. If you already access My Account using a CRA user ID and password or <i>Interac&reg</i> sign-in service, you may continue using that method.</p> -->  
+<p>A provincial sign-in partner uses a type of government-issued identification to sign in. Currently, this sign-in option is only available to residents of BC and Alberta.</p>
+	<!--  <p>You can use a provincial sign-in partner to sign in to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>. You <strong>cannot</strong> use a provincial sign-in partner to sign in to My Business Account or Represent a Client. If you already access My Account using a CRA user ID and password or <i>Interac&reg</i> sign-in service, you may continue using that method.</p> -->  
 	  <h3>On this page</h3>
     <ul>
-      <li><a href="#section1">Who can use a provincial digital ID</a></li>
+      <li><a href="#section1">Who can use a provincial sign-in partner</a></li>
       <li><a href="#section2">Benefits and limitations</a></li>
       <li><a href="#section3">Resources</a></li>
     <!-- <li><a href="#section4">Privacy and security</a></li>-->
     </ul>
   </nav> 
-	  <h2 id="section1">Who can use a provincial digital ID</h2>
+	  <h2 id="section1">Who can use a provincial sign-in partner</h2>
 
 	<!--  <ul>
      <li>My Account</li></ul>-->
-	 <!-- <p>You <strong>cannot</strong> use a provincial digital ID to sign in to:</p>
+	 <!-- <p>You <strong>cannot</strong> use a provincial sign-in partner to sign in to:</p>
 	  <ul class="fa-ul">
      <li><span class="fas fa-times text-danger fa-li"></span>My Business Account</li>
 		  <li><span class="fas fa-times text-danger fa-li"></span>Represent a Client</li></ul>-->
@@ -88,7 +88,7 @@
 <!--    <p>The BC Services Card and Alberta.ca Account are each a type of government-issued identification assigned to residents of BC and Alberta.</p>-->
 	<li class="cnjnctn-col-80">  
 <p>A social insurance number (SIN) to validate your identity the first time you sign in.</p> <p>You will not need to use <i>Interac&reg</i> document verification service or a CRA security code to validate your identity.</p></li></ul>
-		  <p class="mrgn-tp-lg">You can <strong>only</strong> use a provincial digital ID to sign in to My Account. If you already access My Account using a CRA user ID and password or <i>Interac</i> sign-in service, you may continue using that method.</p>
+		  <p class="mrgn-tp-lg">You can <strong>only</strong> use a provincial sign-in partner to sign in to My Account. If you already access My Account using a CRA user ID and password or <i>Interac</i> sign-in service, you may continue using that method.</p>
  
 	
 	<h2 id="section2">Benefits and limitations</h2>
