--- a/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
@@ -57,7 +57,7 @@
 <h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">About provincial sign-in partner</h1>
 </div>
   <nav role="navigation" class="gc-toc">
-<p>A provincial sign-in partner uses a type of government-issued identification to sign in. Currently, this sign-in option is only available to residents of BC and Alberta.</p>
+<p>A provincial sign-in partner uses a type of government-issued identification to sign in. Currently, this sign-in option is only available to residents of British Columbia and Alberta.</p>
 	<!--  <p>You can use a provincial sign-in partner to sign in to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>. You <strong>cannot</strong> use a provincial sign-in partner to sign in to My Business Account or Represent a Client. If you already access My Account using a CRA user ID and password or <i>Interac&reg</i> sign-in service, you may continue using that method.</p> -->  
 	  <h3>On this page</h3>
     <ul>
@@ -87,15 +87,15 @@
 </ul></li>
 <!--    <p>The BC Services Card and Alberta.ca Account are each a type of government-issued identification assigned to residents of BC and Alberta.</p>-->
 	<li class="cnjnctn-col-80">  
-<p>A social insurance number (SIN) to validate your identity the first time you sign in.</p> <p>You will not need to use <i>Interac&reg</i> document verification service or a CRA security code to validate your identity.</p></li></ul>
-		  <p class="mrgn-tp-lg">You can <strong>only</strong> use a provincial sign-in partner to sign in to My Account. If you already access My Account using a CRA user ID and password or <i>Interac</i> sign-in service, you may continue using that method.</p>
+<p>A social insurance number (SIN) to validate your identity the first time you sign in.</p> <p>You will not need to use <i>Interac&reg</i> document verification service or a CRA security code to further validate your identity.</p></li></ul>
+		  <p class="mrgn-tp-lg">You can <strong>only</strong> use a provincial sign-in partner to sign in to My Account. If you already access My Account using a CRA user ID and password or an <i>Interac</i> sign-in partner, you may continue using that method.</p>
  
 	
 	<h2 id="section2">Benefits and limitations</h2>
 <p>Registering with a provincial sign-in partner allows you to:</p>
     <ul class="fa-ul">
      <li><span class="fas fa-check text-success fa-li"></span>Get immediate access to most My Account features</li>
-     <li><span class="fas fa-check text-success fa-li"></span>Register even if you haven’t filed your taxes in the previous 2 years</li>
+     <li><span class="fas fa-check text-success fa-li"></span>Register even if you haven’t filed your taxes in the previous 2 years, as long as you have filed your taxes at least once in the past</li>
     </ul>
     <p>With a provincial partner you cannot use certain accounts and services, for instance:</p>
        <ul class="fa-ul">
@@ -103,7 +103,7 @@
      <li><span class="fas fa-times text-danger fa-li"></span>Express Notice of Assessment</li>
      <li><span class="fas fa-times text-danger fa-li"></span>Auto-fill My Return</li>
   </ul>
-<p>If you would like to use those accounts and services, you can still register for another sign-in option.</p>
+<p>If you would like to access those accounts and services, you can also create a CRA user ID and password or use an <i>Interac</i> sign-in partner to do so.</p>
 	  <h2 id="section3">Resources</h2>
         <p>For assistance with your BC Services Card, go to: <a href="https://www2.gov.bc.ca/gov/content/governments/government-id/bcservicescardapp">BC Services Card Login</a></p>
     <p>For assistance with your Alberta.ca Account, go to: <a href="https://www.alberta.ca/alberta-ca-account-contact">Alberta.ca Account - Contact</a></p>
