--- a/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html
@@ -147,9 +147,10 @@
 <!--  <p>You must enter a one-time passcode each time you sign in.</p> -->
 	<p>You can choose one or more of these options when you enroll. You can also choose additional methods later by signing in to your account and selecting <strong>Multi-factor authentication settings</strong> in your <strong>Profile</strong>.</p>
 		<p>The CRA will never call and ask for your one-time passcode over the telephone. You should never share your one-time passcode with anyone, including anyone calling or texting to request it.</p>
-  <p> If your account becomes locked due to entering the wrong passcode too many times, you will be temporarily locked out for 30 minutes. After that period, you can try again. If this happens 3 times, you will be permanently locked out, and will need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
+ <h3>If your account becomes locked</h3>
+	<p> If your account becomes locked due to entering the wrong passcode too many times, you will be temporarily locked out for 30 minutes. After that period, you can try again. If this happens 3 times, you will be permanently locked out, and will need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
 
-  <h3 id="section5">Get your one-time passcode by telephone</h3>
+  <h3 id="section5">Get your passcode by telephone</h3>
   <p> If you choose to enroll with the telephone option, you will need to provide at least one cell or landline number. Each time you sign in, a new one-time passcode will be sent to the telephone number selected.</p>
   <details>
 	  <summary>You can use VoIP to get your passcode</summary>
@@ -215,7 +216,7 @@
   </ul>
   <p class="mrgn-tp-lg">If you did not receive your one-time passcode, you can:</p>
   <ul>
-    <li>Ask for it to be resent or sent to a different telephone number that is already connected to your account</li>
+    <li>Ask for it to be resent or sent to a different telephone number that you have already enrolled</li>
 	   <li>Try the <strong>Call me</strong> option instead of <strong>Text me</strong > if you are using a VoIP service</li>
     <li>Use the passcode grid if you are already enrolled with that option</li>
 	  <li>Use the authenticator app if it is already set up</li>
@@ -226,13 +227,13 @@
   <!--p> If you select "Text me", the passcode will be sent by Short Messaging Service (SMS). <strong>Open the text message</strong> first, then use the passcode from the body of the message.</p>
   <p> If you select "Call me", you will receive a phone call from a toll-free number, and the passcode will be told to you in an automated message.</p-->
   
-  <h3 id="section6"> Get your one-time passcode by passcode grid</h3>
+  <h3 id="section6"> Get your passcode by passcode grid</h3>
   <p> If you choose to enroll with a passcode grid, the system will generate a unique passcode grid for you. You will use this grid every time you sign in to your account, so you must either save it or print it.</p> 
 	<p>The passcode grid is a table made up of numbered rows and lettered columns, similar to a Bingo card. We will ask for combinations (for example, B,1; A,3) to create your one-time passcode. We will ask for 3 of these combinations each time you sign in. </p>
  <p>Your passcode grid will expire after 18 months. Before the expiry date, sign in to your account and generate a new one in <strong>Multi-factor authentication settings</strong>.
 	<p> If you lose your passcode grid or it expires, you will still be able to sign in if you have added the telephone or authenticator app option for MFA. If you have not, you will need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>. </p>
 
-		<h3 id="section7">Get your time-based one-time passcode with a third-party authenticator app</h3>
+		<h3 id="section7">Get your passcode with a third-party authenticator app</h3>
 		<p>If you choose to use a third-party authenticator app, you will need to download an app that is compatible with the CRA accounts. The app store offers many free third-party authenticator app options to choose from.</p>
 		<p>Using the app, scan the provided QR code with a mobile device when prompted. If you are unable to scan the QR code, you can manually enter the setup key the CRA provides into the app. The app will now be set up and you will not have to complete this step again.</p>
 		<p>The app will then generate a 6-digit time-based one-time passcode for you to sign in with. For security, the app will generate a new passcode every 30 seconds.</p>
