--- a/en/revenue-agency/services/e-services/cra-login-services/locked-account.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/locked-account.html
@@ -312,13 +312,17 @@
     <li>Always use unique passwords rather than reusing the same password for different accounts or systems</li>
     <li>Keep this information secure and do not share it with anyone</li>
   </ul>
-  <h3>Multi-factor authentication (MFA)</h3>
-	<p>Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app. When you sign in to your account, you can update your current MFA settings or enroll in additional MFA options.</p>
-<h3>Choose memorable security questions</h3>
+	<p><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section2">Manage your CRA user ID and password</a></p>
+  <h3>Enroll in multi-factor authentication (MFA) options</h3>
+	<p>We recommend that you enroll in more than one option, although only one option is required. Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app.</p>
+<p><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html#section2">Update your multi-factor authentication (MFA) settings</a></p>
+	<h3>Choose memorable security questions</h3>
   <p>You will be asked to choose 5 security questions that will be used to validate your identity in different situations, for example, when signing in, if you forget your CRA user ID, or if you sign in from a new device.</p>
   <p>Your answers should be easy for you to remember but hard for others to guess. Answers that can change over time or questions that have more than one answer can be hard to remember.</p>
-  <h3>CRA security code</h3>
-  <p>Enter your security code carefully.</p>
+  <p><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section7">Choose your security questions</a></p>
+	<h3>CRA security code</h3>
+  <p>Enter your security code carefully before it expires.</p>
+	<p><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/securitycode.html#section2">Learn more about the CRA security code</a></p>
 </div>
 
 
